# amux

./: CLAUDE.md  Cargo.toml  Dockerfile.dev  Makefile  README.md
.claude/: settings.json  settings.local.json
.claude/worktrees/agent-af75acbc/: .gitignore
.claude/worktrees/agent-af75acbc/.claude/: settings.local.json
aspec/: foundation.md  ideas.md
aspec/architecture/: design.md
aspec/devops/: localdev.md
aspec/uxui/: cli.md
aspec/work-items/: 0003-implement-enhancements.md  0006-template-container-improvements.md  0007-docker-container-tui-improvements.md  0023-dashboard-subcommand.md
aspec/work-items/plans/: 0030-git-enhancements-plan.md  0031-workflow-auto-advance-plan.md  0032-gpg-pinentry-plan.md  0033-performance-audit-findings.md  0033-performance-audit-plan.md
aspec/workflows/: implement-workitem.md
benches/: performance.rs
docs/: architecture.md  getting-started.md  usage.md  workflows.md
docs/blog/: 0001-announcement.md  0004-workflows-and-worktrees.md
docs/releases/: v0.1.0.md  v0.4.0.md
scripts/: release.sh
src/: cli.rs  git.rs  lib.rs  main.rs
src/commands/: agent.rs  auth.rs  chat.rs  claws.rs  download.rs  implement.rs  init.rs  mod.rs  new.rs  output.rs  ready.rs  specs.rs
src/config/: mod.rs
src/docker/: mod.rs
src/tui/: input.rs  mod.rs  pty.rs  render.rs  state.rs
templates/: Dockerfile.claude  Dockerfile.codex  Dockerfile.opencode
tests/: async_cancellation.rs  cli_integration.rs  command_tui_parity.rs  download_integration.rs  memory_bounds.rs  performance_stress.rs  tui_tabs.rs
(+9 files in other folders)
